--- a/Jobsheet3_Javascript/Jobsheet3_Javascript/index.html
+++ b/Jobsheet3_Javascript/Jobsheet3_Javascript/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p> Tutorial Javascript untuk pemula</p>
-        <script src="kode-program.js"></script>
+        <script src="js/kode-program.js"></script>
     </body>
 </html>
