--- a/jobsheet6_jQuery/praktik_jQuery.html
+++ b/jobsheet6_jQuery/praktik_jQuery.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <tittle>Praktikum jQuery</tittle>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     </head>
     <body></body>
 </html>
