js6/jQuery/sec2/no4

--- a/jobsheet6_jQuery/ready.html
+++ b/jobsheet6_jQuery/ready.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Praktikum Minggu ke-4</title>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script>
-            $(document).ready(function() {
+
                 $("#button").click(function() {
                     alert("Ini adalah Praktikum Minggu ke-4");
                 });
-            });
         </script>
     </head>
     <body>
