--- a/jobsheet6_jQuery/slide1.html
+++ b/jobsheet6_jQuery/slide1.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="styleSlide.css"/>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script>
-            $ (document) .ready(function() {
-                $ ("#flip") .click(function(){
-                    $("#kotak2") .slideUp("slow");
-                });
+<head>
+    <link rel="stylesheet" type="text/css" href="styleSlide.css"/>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $("#flip").click(function(){
+                $("#kotak2").slideUp("slow");
             });
-        </script>
-    </head>
-    <body>
-        <div id="flip"> Click To Slide Effect </div>
-        <div id="kotak2" Good morning </div></div>
-    </body>
+        });
+    </script>
+</head>
+<body>
+    <div id="flip"> Click To Slide Effect </div>
+    <div id="kotak2">Good morning</div>
+</body>
 </html>
