--- a/jobsheet6_jQuery/addremove.html
+++ b/jobsheet6_jQuery/addremove.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="styleTable.css"/>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <script>
       $(document).ready(function () {
-        // menambah baris
+
         $(".add-row").click(function () {
           var name = $("#name").val();
           var email = $("#email").val();
@@ -18,7 +19,7 @@
           $("table tbody").append(markup);
         });
 
-        // menghapus baris yang di centang
+        
         $(".delete-row").click(function () {
           $("table tbody")
             .find("input[name='record']")
